feature: add file data in bd
